// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h2
  class="sc-bdVaJa egmUYL"
>
  Heading
</h2>
`;

exports[`renders "Heading" with color prop 2`] = `
<h2
  class="sc-bdVaJa lbPmzU"
>
  Heading
</h2>
`;

exports[`renders "Heading" with l prop 1`] = `
<h2
  class="sc-bdVaJa dtOqgN"
>
  Heading
</h2>
`;

exports[`renders "Heading" with margin 1`] = `
<h2
  class="sc-bdVaJa bJeFWX"
>
  Heading
</h2>
`;

exports[`renders "Heading" with no props 1`] = `
<h2
  class="sc-bdVaJa fzuCsZ"
>
  Heading
</h2>
`;

exports[`renders "Heading" with s prop 1`] = `
<h2
  class="sc-bdVaJa bSVPjN"
>
  Heading
</h2>
`;
